--- a/sveltekit-app/package.json
+++ b/sveltekit-app/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "vite dev --port 3000",
-    "build": "svelte-kit build",
+    "build": "vite build",
     "package": "svelte-kit package",
     "preview": "svelte-kit preview",
     "prepare": "svelte-kit sync",
@@ -27,7 +27,7 @@
     "svelte-preprocess": "^4.10.1",
     "tailwindcss": "^3.0.23",
     "tslib": "^2.3.1",
-    "typescript": "~4.6.2"
+    "typescript": "^4.7.4"
   },
   "type": "module",
   "dependencies": {
